# study-intro_to_axum

./: .gitignore  Cargo.toml  README.md  compose.yaml  entrypoint.sh  myenv.sh  pg_hba.conf
envs/: db.env
ripi/: ripi.md
ripi/.closed/Issue/get_one_item_from_db/: description.md
ripi/.closed/Issue/initial_project_structure/: description.md
ripi/.closed/Issue/returning_json/: description.md
ripi/.closed/Issue/sqlx_implement_and_connect_to_db/: description.md
ripi/Issue/cors_middleware/: description.md
ripi/Issue/creating_a_database/: description.md
ripi/Issue/extracting_json/: description.md
ripi/Issue/get_all_from_the_database/: description.md
ripi/Issue/get_one_item_from_db/: description.md
ripi/Issue/path_variables/: description.md
ripi/Issue/query_parameters/: description.md
ripi/Issue/sqlx_implement_and_connect_to_db/: description.md
ripi/Issue/validating_with_serde/: description.md
samples/: create_task.json  message.json  val_data.json
scripts/: connect_db  curl  dclean  dcompose  run
src/: main.rs
src/handlers/: get.rs  post.rs
